commit on 'master'

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "source": [
-    "Day 1 (Part One): Find the two entries that sum to 2020; what do you get if you multiply them together?"
+    "***Day 1 (Part One): Find the two entries that sum to 2020; what do you get if you multiply them together?***"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -58,7 +58,7 @@
   },
   {
    "source": [
-    "Day 1 (Part Two): what is the product of the three entries that sum to 2020?"
+    "***Day 1 (Part Two): what is the product of the three entries that sum to 2020?***"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -97,7 +97,7 @@
   },
   {
    "source": [
-    "Day 2 (Part One): How many passwords are valid according to their policies?"
+    "***Day 2 (Part One): How many passwords are valid according to their policies?***"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -138,7 +138,7 @@
   },
   {
    "source": [
-    "Day 2 (Part Two): How many passwords are valid according to the new interpretation of the policies?"
+    "***Day 2 (Part Two): How many passwords are valid according to the new interpretation of the policies?***"
    ],
    "cell_type": "markdown",
    "metadata": {}
