--- a/solution.ipynb
+++ b/solution.ipynb
@@ -53,8 +53,16 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 115,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "972576\n"
+     ]
+    }
+   ]
   },
   {
    "source": [
@@ -140,8 +148,10 @@
    "source": [
     "***Day 2 (Part Two): How many passwords are valid according to the new interpretation of the policies?***"
    ],
-   "cell_type": "markdown",
-   "metadata": {}
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -177,6 +187,302 @@
     "            continue\n",
     "print(c)      "
    ]
+  },
+  {
+   "source": [
+    "***Day 3 (Part One): Starting at the top-left corner of your map and following a slope of right 3 and down 1, how many trees would you encounter?***"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "232\n"
+     ]
+    }
+   ],
+   "source": [
+    "#read data\n",
+    "with open(\"data/input_d3.txt\", \"r\") as f:\n",
+    "    m = f.read().split('\\n')\n",
+    "    m = m[:-1]\n",
+    "    cur_w = 0\n",
+    "    cur_h = 0\n",
+    "    h = len(m)\n",
+    "    w = len(m[0])\n",
+    "    c = 0\n",
+    "    while cur_h < h:\n",
+    "        if cur_w >= w:\n",
+    "            cur_w -= w\n",
+    "        if m[cur_h][cur_w] is '#':\n",
+    "            c += 1\n",
+    "        cur_h += 1\n",
+    "        cur_w += 3\n",
+    "    print(c)"
+   ]
+  },
+  {
+   "source": [
+    "***Day 3 (Part Two): What do you get if you multiply together the number of trees encountered on each of the listed slopes?***"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3952291680\n"
+     ]
+    }
+   ],
+   "source": [
+    "#read data\n",
+    "import math\n",
+    "with open(\"data/input_d3.txt\", \"r\") as f:\n",
+    "    m = f.read().split('\\n')\n",
+    "    m = m[:-1]\n",
+    "    h = len(m)\n",
+    "    w = len(m[0])\n",
+    "    c = [0]*5\n",
+    "    chan = [1,1,1,1,2]\n",
+    "    chan_w = [1,3,5,7,1]\n",
+    "    for i in range(5):\n",
+    "        cur_w = 0\n",
+    "        cur_h = 0\n",
+    "        while cur_h < h:\n",
+    "            if cur_w >= w:\n",
+    "                cur_w -= w\n",
+    "            if m[cur_h][cur_w] is '#':\n",
+    "                c[i] += 1\n",
+    "            cur_h += chan[i]\n",
+    "            cur_w += chan_w[i]\n",
+    "    out = 1\n",
+    "    for ent in c:\n",
+    "        out *= ent\n",
+    "    print(out)"
+   ]
+  },
+  {
+   "source": [
+    "***Day 4 (Part One): In your batch file, how many passports are valid?***"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "196\n"
+     ]
+    }
+   ],
+   "source": [
+    "#read data\n",
+    "import math\n",
+    "with open(\"data/input_d4.txt\", \"r\") as f:\n",
+    "    m = f.read().split('\\n')\n",
+    "    c = 0\n",
+    "    temp = set()\n",
+    "    match = set(['byr', 'iyr', 'eyr', 'hgt', 'hcl', 'ecl', 'pid'])\n",
+    "    for l in m:\n",
+    "        if len(l) == 0:\n",
+    "            if match == temp:\n",
+    "                c+=1\n",
+    "            temp = set()\n",
+    "        else:\n",
+    "            l = l.split(' ')\n",
+    "            for p in l:\n",
+    "                key = p[:p.index(':')]\n",
+    "                if key != 'cid':\n",
+    "                    temp.add(key)\n",
+    "    print(c)"
+   ]
+  },
+  {
+   "source": [
+    "***Day 4 (Part Two): In your batch file, how many passports are valid?***"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "114\n"
+     ]
+    }
+   ],
+   "source": [
+    "#read data\n",
+    "import re\n",
+    "with open(\"data/input_d4.txt\", \"r\") as f:\n",
+    "    m = f.read().split('\\n')\n",
+    "    c = 0\n",
+    "    temp = set()\n",
+    "    match = set(['byr', 'iyr', 'eyr', 'hgt', 'hcl', 'ecl', 'pid'])\n",
+    "    for l in m:\n",
+    "        if len(l) == 0:\n",
+    "            if match == temp:\n",
+    "                c+=1\n",
+    "            temp = set()\n",
+    "        # horrible solution...\n",
+    "        else:\n",
+    "            l = l.split(' ')\n",
+    "            for p in l:\n",
+    "                key, val = p.split(':')\n",
+    "                if key != 'cid':\n",
+    "                    if key == 'byr' and not (1920 <= int(val) <= 2002):\n",
+    "                        continue\n",
+    "                    elif key == 'iyr' and not (2010 <= int(val) <= 2020):\n",
+    "                        continue\n",
+    "                    elif key == 'eyr' and not (len(val) == 4 and 2020 <= int(val) <= 2030):\n",
+    "                        continue\n",
+    "                    elif key == 'hgt':\n",
+    "                        v2 = re.search(\"[a-z]\", val)\n",
+    "                        if not v2:\n",
+    "                            continue\n",
+    "                        v2 = v2.start()\n",
+    "                        v1 = val[:v2]\n",
+    "                        v2 = val[v2:]\n",
+    "                        if v2 == 'cm' and not 150 <= int(v1) <= 193:\n",
+    "                            continue\n",
+    "                        elif v2 == 'in' and not 59 <= int(v1) <= 76:\n",
+    "                            continue\n",
+    "                    elif key == 'hcl' and not (val[0]=='#' and re.search(\"[0-9a-f]\",val[1:]) and len(val[1:]) == 6):\n",
+    "                        continue\n",
+    "                    elif key == 'ecl' and not val in ['amb','blu','brn','gry','grn','hzl','oth']:\n",
+    "                        continue\n",
+    "                    elif key == 'pid' and not len(val) == 9:\n",
+    "                        continue\n",
+    "                    temp.add(key)\n",
+    "    print(c)\n",
+    "\n"
+   ]
+  },
+  {
+   "source": [
+    "***Day 5 (Part One): What is the highest seat ID on a boarding pass?***"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "996\n"
+     ]
+    }
+   ],
+   "source": [
+    "#read data\n",
+    "import math\n",
+    "with open(\"data/input_d5.txt\", \"r\") as f:\n",
+    "    m = f.read().split('\\n')\n",
+    "    h = 0\n",
+    "    for line in m[:-1]:\n",
+    "        row = line[:-3]\n",
+    "        row = row.replace(\"B\",\"1\")\n",
+    "        row = row.replace(\"F\",\"0\")\n",
+    "        col = line[-3:]\n",
+    "        col = col.replace('R',\"1\")\n",
+    "        col = col.replace('L',\"0\")\n",
+    "        col = int(col, 2)\n",
+    "        row = int(row, 2)\n",
+    "        h = max(h, row*8+col)\n",
+    "    print(h)\n"
+   ]
+  },
+  {
+   "source": [
+    "***Day 5 (Part Two): What is the ID of your seat?***"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "671\n"
+     ]
+    }
+   ],
+   "source": [
+    "#read data\n",
+    "import math\n",
+    "with open(\"data/input_d5.txt\", \"r\") as f:\n",
+    "    m = f.read().split('\\n')\n",
+    "    ids = []\n",
+    "    for line in m[:-1]:\n",
+    "        row = line[:-3]\n",
+    "        row = row.replace(\"B\",\"1\")\n",
+    "        row = row.replace(\"F\",\"0\")\n",
+    "        col = line[-3:]\n",
+    "        col = col.replace('R',\"1\")\n",
+    "        col = col.replace('L',\"0\")\n",
+    "        col = int(col, 2)\n",
+    "        row = int(row, 2)\n",
+    "        ids.append(row*8+col)\n",
+    "    ids = sorted(ids)\n",
+    "    c = ids[0]\n",
+    "    while c < ids[-1]:\n",
+    "        if c-1 in ids and c+1 in ids and c not in ids:\n",
+    "            print(c)\n",
+    "            break\n",
+    "        c+=1\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
