--- a/solution.ipynb
+++ b/solution.ipynb
@@ -23,13 +23,15 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
    "source": [
     "***Day 1 (Part One): Find the two entries that sum to 2020; what do you get if you multiply them together?***"
    ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 115,
    "source": [
     "#read data\n",
     "with open(\"data/input_d1.txt\", \"r\") as f:\n",
@@ -51,9 +53,6 @@
     "    else:\n",
     "        s.add(entr)"
    ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": 115,
    "outputs": [
     {
      "output_type": "stream",
@@ -62,28 +61,19 @@
       "972576\n"
      ]
     }
-   ]
+   ],
+   "metadata": {}
   },
   {
+   "cell_type": "markdown",
    "source": [
     "***Day 1 (Part Two): what is the product of the three entries that sum to 2020?***"
    ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "199300880\n"
-     ]
-    }
-   ],
    "source": [
     "#algorithm: \n",
     "# 1) keep a set of previously visited numbers\n",
@@ -101,30 +91,28 @@
     "                print(i*entr*(2020-entr-i))\n",
     "                break\n",
     "        s.add(entr)"
-   ]
-  },
-  {
-   "source": [
-    "***Day 2 (Part One): How many passwords are valid according to their policies?***"
    ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "tags": []
-   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "603\n"
+      "199300880\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "***Day 2 (Part One): How many passwords are valid according to their policies?***"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "source": [
     "c = 0\n",
     "\n",
@@ -142,30 +130,32 @@
     "        else:\n",
     "            continue\n",
     "print(c)      "
-   ]
-  },
-  {
-   "source": [
-    "***Day 2 (Part Two): How many passwords are valid according to the new interpretation of the policies?***"
    ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "404\n"
+      "603\n"
      ]
     }
    ],
+   "metadata": {
+    "tags": []
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "***Day 2 (Part Two): How many passwords are valid according to the new interpretation of the policies?***"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "source": [
     "c = 0\n",
     "\n",
@@ -186,30 +176,28 @@
     "        else:\n",
     "            continue\n",
     "print(c)      "
-   ]
-  },
-  {
-   "source": [
-    "***Day 3 (Part One): Starting at the top-left corner of your map and following a slope of right 3 and down 1, how many trees would you encounter?***"
    ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "tags": []
-   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "232\n"
+      "404\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "***Day 3 (Part One): Starting at the top-left corner of your map and following a slope of right 3 and down 1, how many trees would you encounter?***"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "source": [
     "#read data\n",
     "with open(\"data/input_d3.txt\", \"r\") as f:\n",
@@ -228,28 +216,30 @@
     "        cur_h += 1\n",
     "        cur_w += 3\n",
     "    print(c)"
-   ]
-  },
-  {
-   "source": [
-    "***Day 3 (Part Two): What do you get if you multiply together the number of trees encountered on each of the listed slopes?***"
    ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "3952291680\n"
+      "232\n"
      ]
     }
    ],
+   "metadata": {
+    "tags": []
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "***Day 3 (Part Two): What do you get if you multiply together the number of trees encountered on each of the listed slopes?***"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "source": [
     "#read data\n",
     "import math\n",
@@ -275,30 +265,28 @@
     "    for ent in c:\n",
     "        out *= ent\n",
     "    print(out)"
-   ]
-  },
-  {
-   "source": [
-    "***Day 4 (Part One): In your batch file, how many passports are valid?***"
    ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {
-    "tags": []
-   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "196\n"
+      "3952291680\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "***Day 4 (Part One): In your batch file, how many passports are valid?***"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "source": [
     "#read data\n",
     "import math\n",
@@ -319,30 +307,30 @@
     "                if key != 'cid':\n",
     "                    temp.add(key)\n",
     "    print(c)"
-   ]
-  },
-  {
-   "source": [
-    "***Day 4 (Part Two): In your batch file, how many passports are valid?***"
    ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "tags": []
-   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "114\n"
+      "196\n"
      ]
     }
    ],
+   "metadata": {
+    "tags": []
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "***Day 4 (Part Two): In your batch file, how many passports are valid?***"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "source": [
     "#read data\n",
     "import re\n",
@@ -388,30 +376,32 @@
     "                    temp.add(key)\n",
     "    print(c)\n",
     "\n"
-   ]
-  },
-  {
-   "source": [
-    "***Day 5 (Part One): What is the highest seat ID on a boarding pass?***"
    ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "996\n"
+      "114\n"
      ]
     }
    ],
+   "metadata": {
+    "tags": []
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "***Day 5 (Part One): What is the highest seat ID on a boarding pass?***"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "source": [
     "#read data\n",
     "import math\n",
@@ -429,28 +419,28 @@
     "        row = int(row, 2)\n",
     "        h = max(h, row*8+col)\n",
     "    print(h)\n"
-   ]
-  },
-  {
-   "source": [
-    "***Day 5 (Part Two): What is the ID of your seat?***"
    ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "671\n"
+      "996\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "***Day 5 (Part Two): What is the ID of your seat?***"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "source": [
     "#read data\n",
     "import math\n",
@@ -475,14 +465,64 @@
     "            break\n",
     "        c+=1\n",
     "        \n"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "671\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "***Day 6 (Part One): What is the sum of those counts?***"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 113,
+   "source": [
+    "#read data\n",
+    "import math\n",
+    "with open(\"data/input_d6.txt\", \"r\") as f:\n",
+    "    m = f.read().split('\\n')\n",
+    "    ids = []\n",
+    "    for line in m[:-1]:\n",
+    "        print(line)\n",
+    "    #     row = line[:-3]\n",
+    "    #     row = row.replace(\"B\",\"1\")\n",
+    "    #     row = row.replace(\"F\",\"0\")\n",
+    "    #     col = line[-3:]\n",
+    "    #     col = col.replace('R',\"1\")\n",
+    "    #     col = col.replace('L',\"0\")\n",
+    "    #     col = int(col, 2)\n",
+    "    #     row = int(row, 2)\n",
+    "    #     ids.append(row*8+col)\n",
+    "    # ids = sorted(ids)\n",
+    "    # c = ids[0]\n",
+    "    # while c < ids[-1]:\n",
+    "    #     if c-1 in ids and c+1 in ids and c not in ids:\n",
+    "    #         print(c)\n",
+    "    #         break\n",
+    "    #     c+=1\n",
+    "        \n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "671\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ]
 }
